# Makefile used by configure to create real Makefile

# Install configuration file
usewithtorconfdir = $(CONFDIR)/
usewithtorconf_DATA = torsocks.conf

# Install man pages
torsocksmanpagedir = $(mandir)/man1
torsocksmanpage_DATA = torsocks.1

torsocks8manpagedir = $(mandir)/man8
torsocks8manpage_DATA = torsocks.8

usewithtormanpagedir = $(mandir)/man1
usewithtormanpage_DATA = usewithtor.1

torsocksconfmanpagedir = $(mandir)/man5
torsocksconfmanpage_DATA = torsocks.conf.5
