# Makefile used by configure to create real Makefile

# Install configuration file
confdir = $(CONFDIR)/
dist_conf_DATA = torsocks.conf

# Install man pages
dist_man_MANS = torsocks.1 torsocks.8 usewithtor.1 torsocks.conf.5

dist_data_DATA = socks/SOCKS5 socks/SOCKS4.protocol socks/socks-extensions.txt \
                 patches/compilewarnings.patch patches/conffile.patch patches/getaddrbyhost.patch \
                 patches/getpeername.patch patches/infiniteloop.patch patches/localaddresses.patch \
                 patches/README patches/README.TORDNS patches/tordns.patch notes/DEBUG

